<resources>
    <string name="app_name">PhotoGuess</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="roomPin">ROOM %1$s</string>
    <string name="selectedPlayer">%1$d</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="logo">Logo</string>
    <string name="enter_game_pin">Enter game PIN</string>
    <string name="join_game">Join Game</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="create_game">Create Game</string>
    <string name="HowToPlay">How To Play</string>
    <string name="test">TEST</string>
    <string name="home">Home</string>
    <string name="master_volume">Master Volume</string>
    <string name="music_volume">Music Volume</string>
    <string name="sfx_volume">SFX Volume</string>
    <string name="arrow">arrow</string>
    <string name="player_name">Player Name</string>
    <string name="spin">SPIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player1">player1</string>
</resources>