<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <ImageButton
        android:id="@+id/galleryLaunchBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="92dp"
        android:contentDescription="@string/gallery"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toStartOf="@+id/cameraLaunchBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="413dp"
        android:layout_height="307dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uploadlogo_foreground" />

    <ImageButton
        android:id="@+id/cameraLaunchBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@+id/galleryLaunchBTN"
        android:contentDescription="@string/camera"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/galleryLaunchBTN"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        tools:ignore="ImageContrastCheck" />

    <ListView
        android:id="@+id/roomShuffle"
        android:layout_width="411dp"
        android:layout_height="235dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/BackBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryLaunchBTN"
        tools:listitem="@layout/fragment_item" />

    <Button
        android:id="@+id/BackBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="43dp"
        android:backgroundTint="#FF0000"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/SPIN"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="376dp"
        android:layout_marginBottom="43dp"
        android:backgroundTint="#FF0000"
        android:text="SPIN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>